--- a/backend/todo-tdd/package.json
+++ b/backend/todo-tdd/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "jest": "^29.6.4",
     "mongoose": "^7.4.4",
-    "node-mocks-http": "^1.13.0"
+    "node-mocks-http": "^1.13.0",
+    "supertest": "^6.3.3"
   }
 }
