--- a/backend/todo-tdd/package.json
+++ b/backend/todo-tdd/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "jest --watchAll",
-        "start": "node app.js"
+        "start": "node app.js",
+        "watch": "nodemon app.js"
     },
     "author": "",
     "license": "ISC",
@@ -15,5 +16,8 @@
         "mongoose": "^7.4.4",
         "node-mocks-http": "^1.13.0",
         "supertest": "^6.3.3"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.22"
     }
 }
