--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -2,10 +2,10 @@
 version: "3.7"
 
 services:
-# ---------------------------------------------------------------------
-# | ExpressJS API                                                     |
-# ---------------------------------------------------------------------
-    todo-tdd:
+    # ---------------------------------------------------------------------
+    # | ExpressJS API                                                     |
+    # ---------------------------------------------------------------------
+    todo-tdd-service:
         build:
             context: ./todo-tdd
             dockerfile: dev.Dockerfile
@@ -29,10 +29,40 @@ services:
             - GEOCODER_PROVIDER=${GEOCODER_PROVIDER}
             - GEOCODER_API_KEY=${GEOCODER_API_KEY}
             - NODE_ENV=${NODE_ENV}
+            - API_PORT=${API_PORT}
 
-# ---------------------------------------------------------------------
-# | MongoDB Database Server                                            |
-# ---------------------------------------------------------------------
+    # ---------------------------------------------------------------------
+    # | ExpressJS TEST API                                                     |
+    # ---------------------------------------------------------------------
+    test-todo-tdd-service:
+        build:
+            context: ./todo-tdd
+            dockerfile: test.Dockerfile
+        image: paulserbandev/test-todo-tdd
+        container_name: test-todo-tdd-container
+        restart: always
+        volumes:
+            - ./todo-tdd:/usr/src/app/
+            - /usr/src/app/node_modules
+        ports:
+            - $TEST_API_PORT:$NODE_DOCKER_PORT
+        depends_on:
+            - mongo-service
+        environment:
+            - DB_LOCAL_URI=${DB_LOCAL_URI}
+            - MONGO_USERNAME=${MONGO_USERNAME}
+            - MONGO_PASSWORD=${MONGO_PASSWORD}
+            - MONGO_HOSTNAME=${MONGO_HOSTNAME}
+            - MONGO_PORT=${MONGO_PORT}
+            - MONGO_DB=${MONGO_DB}
+            - GEOCODER_PROVIDER=${GEOCODER_PROVIDER}
+            - GEOCODER_API_KEY=${GEOCODER_API_KEY}
+            - NODE_ENV=${NODE_ENV}
+            - API_PORT=${API_PORT}
+
+    # ---------------------------------------------------------------------
+    # | MongoDB Database Server                                            |
+    # ---------------------------------------------------------------------
     mongo-service:
         image: mongo:latest
         container_name: mongo-container
