--- a/backend/todo-tdd/package.json
+++ b/backend/todo-tdd/package.json
@@ -4,20 +4,22 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "export PORT=0 && jest --watchAll --verbose",
-        "start": "node app.js",
-        "watch": "nodemon app.js"
+        "test": "jest --watchAll --verbose --runInBand --detectOpenHandles --forceExit --coverage",
+        "start": "node server.js",
+        "watch": "nodemon server.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.2",
-        "jest": "^29.6.4",
-        "mongoose": "^7.4.4",
-        "node-mocks-http": "^1.13.0",
-        "supertest": "^6.3.3"
+        "mongoose": "^7.4.4"
     },
     "devDependencies": {
-        "nodemon": "^2.0.22"
+        "jest": "^29.6.4",
+        "jest-mock": "^29.6.3",
+        "mongodb-memory-server": "^8.15.1",
+        "node-mocks-http": "^1.13.0",
+        "nodemon": "^2.0.22",
+        "supertest": "^6.3.3"
     }
 }
