feat: migrate to yarn

--- a/backend/todo-tdd/package.json
+++ b/backend/todo-tdd/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "todo-tdd",
+    "name": "@wbk--test-driven-development-javascript/todo-tdd",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
