--- a/frontend/todo-list-app--mvc-jasmine/package.json
+++ b/frontend/todo-list-app--mvc-jasmine/package.json
@@ -1,5 +1,8 @@
 {
-    "private": true,
+    "name": "@wbk--test-driven-development-javascript/todo-list-app--mvc-jasmine",
+    "version": "0.1.0",
+    "description": "",
+    "author": "Paul Serban",
     "dependencies": {
         "todomvc-common": "^1.0.1",
         "todomvc-app-css": "^2.0.1"
